ZERO ide warnings